<resources>
    <string name="app_name">IThinkBest 微型創業鳯凰小幫手</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

    <string name="title_section1">最近提的需求</string>
    <string name="title_section2">我也要提需求</string>
    <string name="title_section3">關於這個專案</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="content_authority">com.ithinkbest.phoneix.assistant</string>

    <string name="action_example">Example action</string>

    <string name="mainBtn1">查看政府資料開放</string>
    <string name="mainBtn2">學員問卷調查</string>
    <string name="mainBtn3">查看學員問卷調查統計</string>
    <string name="mainBtn4">關於這個專案</string>
    <string name="btn4">最近提的需求</string>
    <string name="title_activity_business_category">行業別</string>
    <string name="title_activity_gcis">經濟部商業司公開資料供應清單</string>
    <string name="open1">經濟部商業司公開資料供應清單</string>
    <string name="open2">縣市別</string>
    <string name="open3">公司登記現有家數及實收資本額－按行業別及縣市別</string>
    <string name="title_activity_open_data">查看政府資料開放</string>
    <string name="title_activity_city_list">縣市別</string>
    <string name="title_activity_cmp_rpt1">公司登記現有家數及實收資本額－按行業別及縣市別</string>
    <string name="title_activity_survey">SurveyActivity</string>
    <string name="survey1">問卷1: 微型創業鳳凰,進階班上課心得</string>
    <string name="survey3">...</string>
    <string name="title_activity_s1">問卷1: 微型創業鳳凰,進階班上課心得></string>
    <string name="title_activity_s2">問卷2: 關於這支APP</string>

    <string name="s1_01">1. 操作這支APP您覺得?</string>
    <string name="s1_01a">容易</string>
    <string name="s1_01b">有點困難</string>
    <string name="s1_01c">很困難</string>
    <string name="prev">上一題</string>
    <string name="next">下一題</string>
    <string name="submit">提交送出</string>
    <string name="title_activity_to_gcm">GCM activity title</string>
    <string name="launch">launch</string>
    <string name="title_activity_util">UtilActivity</string>
    <string name="title_activity_check_survey_summary">查看學員問卷調查統計</string>
    <string name="chkResultBtn1">查看問卷1: 微型創業鳳凰,進階班上課心得</string>
    <string name="chkResultBtn2">查看問卷2: 關於這支APP</string>

    <string name="title_activity_check_survey_result001">查看問卷1: 微型創業鳳凰,進階班上課心得</string>
    <string name="title_activity_check_survey_result002">查看問卷2: 關於這支APP</string>

</resources>
